# 2024223

./: .gitignore  0.1.0_alpha_10211300_top取流降帧.py  0.1.0_alpha_102120000_top取流降帧_right取22帧.py  0.1.0_alpha_102120000_top取流降帧_right取22帧_使用cpu读取数据.py  0.1.0_alpha_102120000_top取流降帧_right取22帧_时间戳.py  0.1.0_alpha_102120000_top取流降帧_使用cpu读取数据.py  0522-159-reccar.txt  0523-283-reccar.txt  0527-001-reccar.txt  0529-001-reccar.txt  0530-001-reccar.txt  0611-001-reccar.txt  2024223  2024_11_12_script.py  CMakeLists.txt  Container_det.py  Container_det_trt_yolov5.py  FFmpeg限制帧率.py  LOGGER.py  V0.2.0(v2+top模型(1018)).py  V0.2.0_2024_11_12_OCR.py  V0.2.0_2024_11_12_REC.py  V0.2.0_2024_11_12_test.py  V0.2.0_version_iteration.py  V0.2.0_新_测试机器.py  V0.2.0_新_测试机器_异步(save新).py  V0.2.0_新_测试机器_异步.py  V0.2.0_降帧.py  V0.2.0_降帧_现场代码.py  V0.2.0_降帧_线程池.py  V0.4.0_save_test.py  V0.4.0_独立界面_rear front_top_拼图独立_save.py  V0.4.0_独立界面_rear front_top_拼图独立_save_test.py  V0.4.0_独立界面_rear_front_top_拼图独立.py  camera_model.json  camera_test.json  clear_img.py  clip_Video.py  clip_Video_two.py  cls_infer.py  (+70 more)
Automatic_Clip_Video/: clip_Video.py
OCR_TOOL/: __init__.py  generate_check_list.py  ocr.py  owner_code_check_list.csv  owner_code_check_list_back.csv  owner_code_records.csv  type_code_check_list.csv  type_code_check_list_temp.csv
TianJinGangText/: test.py
algorithms/: __init__.py  benchmarks.py  detect.py  detector.py  export.py
algorithms/models_sx/: common.py  experimental.py  yolo.py
algorithms/utils_sx/: augmentations.py  autoanchor.py  autobatch.py  dataloaders.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
config/det/: my_det_mv3_db.yml  my_det_r50_db++_td_tr.yml
config/rec/: my_contain_rec_chinese_lite_train_v2.0.yml  my_en_PP-OCRv3_rec.yml
config_car/det/: my_car_det_r50_db++_td_tr.yml
config_car/rec/: my_rec_chinese_lite_train_v2.0.yml
configs/: config_5s_trt.py  config_5s_trt_door.py  config_5s_truck.py
plate_recognition/: double_plate_split_merge.py
ppocr/postprocess/: db_postprocess.py  rec_postprocess.py
ppocr_car/data/: __init__.py
ppocr_car/data/imaug/: ct_process.py
ppocr_car/modeling/architectures/: base_model.py  distillation_model.py
ppocr_car/modeling/backbones/: rec_micronet.py  rec_mobilenet_v3.py  rec_vitstr.py
ppocr_car/modeling/heads/: det_db_head.py  rec_abinet_head.py  rec_multi_head.py  rec_nrtr_head.py  rec_srn_head.py
ppocr_car/postprocess/: __init__.py  rec_postprocess.py
ppocr_car/utils/: dic_license_plate.txt  network.py  save_load.py
reader_data/: logger_cpu_gpu.py  stream_opencv_reader.py  stream_tensor_reader.py
tools/: program.py
utils/: google_utils.py
weights/: plate_detect.pt
(+2 files in other folders)
